// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`validateModifiers It should include base modifiers 1`] = `
"Entity \\"foo:test\\" did not recognize the following properties: foo, valid properties are: inputType, before, value, after, outputType, error, params, bar.
Please review your entity and make any corrections so it can be parsed:
'foo:test': { inputType: true,
  outputType: true,
  before: true,
  after: true,
  error: true,
  value: true,
  foo: true }"
`;

exports[`validateProperties It should throw error if keys dont match 1`] = `
"Entity \\"foo:test\\" did not recognize the following properties: foo, valid properties are: bar.
Please review your entity and make any corrections so it can be parsed:
'foo:test': { foo: true }"
`;

exports[`validateProperties It should throw error if keys dont match 2`] = `
"Entity \\"foo:test\\" did not recognize the following properties: foo, valid properties are: bar.
Please review your entity and make any corrections so it can be parsed:
'foo:test': { bar: true, foo: true }"
`;
